tests/NormalTests/paczka1/fuzzy1/71902049.err
Error in line 23: nmHIuR1U A715 61,8
Error in line 31: qdjBaqq A897 40,22
Error in line 32: p18 S763 66,8
Error in line 26: G8MgOF A715 59,2
Error in line 33: p18 A715 59,3
